# rust-yew-tailwindcss

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  test.html
demo/component/: Cargo.toml  Trunk.toml  index.html
demo/component/src/: app.rs  main.rs
src/: main.rs
styles/: output.css  tailwindv4.1.11.css
