[package]
name = "yew-component"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://mirror.ghproxy.com/github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"  # For making the fetch call.
serde = { version = "1.0", features = ["derive"] }  # with derive features For de-serializing the JSON response
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"  # For executing Rust Future as a Promise
web-sys = "0.3.76"
wasm-logger = "0.2.0"